# models/area/area.model.js
@@ -2,7 +2,7 @@ const mongoose = require("mongoose");
 
 var areaSchema = new mongoose.Schema({
   name: String,
-  ownerId: mongoose.SchemaTypes.ObjectId,
+  ownerIds: Array,
   location: String,
 });
 
