# models/area/area.services.js
@@ -3,9 +3,16 @@ const Area = require("./area.model");
 const AreaServices = {};
 
 AreaServices.createArea = async (createAreaModel) => {
-  const { name, ownerId, location } = createAreaModel;
-  let area = await Area.create({ name, ownerId, location });
+  const { name, ownerIds, location } = createAreaModel;
+  console.log(name);
+  console.log(ownerIds);
+  console.log(location);
+  let area = await Area.create({ name, ownerIds, location });
   return area;
+};
+
+AreaServices.getAreasByOwnerId = async (ownerId) => {
+  return await Area.find({ ownerIds: ownerId });
 };
 
 module.exports = AreaServices;
