# models/user/user.model.js
@@ -4,6 +4,8 @@ var userSchema = new mongoose.Schema({
   username: String,
   password: String,
   email: String,
+  phone: String,
+  location: String,
 });
 
 module.exports = mongoose.model("User", userSchema);
